[package]
name = "bge-wasm"
version = "0.0.2"
edition = "2021"
description = "BinGameEngine runtime for wasm and javascript"
license = "MIT"
repository = "git+ssh://git@github.com/TNTSuperMan/bge-wasm-rust"
authors = ["TNTSuperMan"]

[lib]
path = "src/runtime.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = "*"
inflate = "0.4.5"
console_error_panic_hook = "0.1.7"
wavegen = "0.4.1"

[profile.release]
debug = true
