[package]
name = "bge-wasm"
version = "0.0.5"
edition = "2021"
description = "BinGameEngine runtime for wasm and JavaScript"
license = "MIT"
repository = "git+ssh://git@github.com/TNTSuperMan/bge-wasm-rust"
authors = ["TNTSuperMan"]

[lib]
path = "src/runtime.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = "*"
inflate = "0.4.5"
console_error_panic_hook = "0.1.7"
hound = "3.5.1"

[profile.dev]
debug = true
